--- a/templates/deluxe/css/webstore.css
+++ b/templates/deluxe/css/webstore.css
@@ -742,6 +742,13 @@ padding:10px 8px 10px 14px;
 }
 
 /***** Product Details *****/
+.product_details {
+    display: block;
+    float: left;
+    margin-left: 12px;
+    margin-top: 5px;
+}
+
 .product_details .img {
 border:1px solid #999;
 display:block;
@@ -910,13 +917,13 @@ padding:3px 7px 3px 0;
 }
 
 #sharingtools {
-display:absolute;
-height: 28px;
-margin-top: -53px;
-margin-left: 500px;
-text-align: right;
-width: 250px;
-z-index: 1100;
+    display:relative;
+    height: 28px;
+    margin-top: -26px;
+    margin-left: 155px;
+    text-align: right;
+    width: 250px;
+    z-index: 1100;
 }
 
 /***** Invoice Cart *****/
@@ -1576,7 +1583,7 @@ padding-left:3px;
 
 .border,.registry,.cart {
 border:1px solid #cdcdcd;
-margin:0 auto 15px;
+/*margin:0 auto 15px;*/
 width:740px;
 }
 
