--- a/templates/framework/css/webstore.css
+++ b/templates/framework/css/webstore.css
@@ -630,6 +630,13 @@ padding:10px 8px 10px 14px;
 }
 
 /***** Product Details *****/
+.product_details {
+    display: block;
+    float: left;
+    margin-left: 12px;
+    margin-top: 5px;
+}
+
 .product_details .img {
 display:block;
 float:left;
@@ -773,13 +780,13 @@ padding:3px 7px 3px 0;
 }
 
 #sharingtools {
-display:absolute;
-height: 28px;
-margin-top: -53px;
-margin-left: 500px;
-text-align: right;
-width: 250px;
-z-index: 1100;
+    display:relative;
+    height: 28px;
+    margin-top: -26px;
+    margin-left: 155px;
+    text-align: right;
+    width: 250px;
+    z-index: 1100;
 }
 
 /***** Invoice Cart *****/
